# CW

./: Nguyen_cw_final.docx  README.md  cw_Nguyen_tran.docx  docs.txt
main_cw/: executable  final_program  grm.txt  process.txt  process_trans.txt  Запрос.txt
main_cw/llvm_ir/: CMakeLists.txt  main.cpp
main_cw/src/: main.py
main_cw/src/ast_t/: __init__.py  error.py  my_ast.py  parser_edsl.py  pointer.py  table.py
main_cw/test_for_basic/: test1.ll  test1.s  test2.basic  test2.ll  test4.ll  test5.basic  test5.ll  test5.s  test6.basic  test6.ll  test7.basic  test7.ll
